--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="7guis with React" content="React implementation of the 7guis challenge" />
 
-    <title>React App</title>
+    <title>7 GUIs Challenge with React and Tailwind CSS</title>
   </head>
   <body>
     <div id="root"></div>
